<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QuadController</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_action_flymode_stable">Switch to Acro Mode</string>
    <string name="action_action_flymode_acro">Switch to Stable Mode</string>
    <string name="action_altitude_holder_enable">Enable Altitude Holder</string>
    <string name="action_altitude_holder_disable">Disable Altitude Holder</string>
    <string name="action_take_picture">Take picture</string>
    <string name="action_snap_video_record">Capture video</string>
    <string name="action_snap_video_pause">Pause video</string>
    <string name="action_snap_video_stop">Stop video</string>

    <string name="connected">Connected</string>
    <string name="picture_saved">Picture saved</string>


    <string name="info_connect">Press menu button and select \'Connect\'</string>
    <string name="need_restart">You need to restart the application for the changes to take effect</string>

    <string name="app_description">Controller for RPiCopter</string>
    <string name="app_copyright">Copyright \u00A9 2014-2015 Danilo &amp; Ivano Selvaggi</string>
    <string name="app_credits">This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n\n
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.\n\n
You should have received a copy of the GNU General Public License
along with this program.  If not, see http://www.gnu.org/licenses/</string>

</resources>