<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.wilds.quadcontroller.app.joystick.DualJoystickView" >

    <item android:id="@+id/action_connect"
        android:title="@string/action_connect"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_upload"/>

    <item android:id="@+id/action_flymode"
        android:title="@string/action_action_flymode_acro"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_send"/>

    <item android:id="@+id/action_altitude_holder"
        android:title="@string/action_altitude_holder_enable"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_sort_by_size"/>

    <item android:id="@+id/action_take_picture"
        android:title="@string/action_take_picture"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_gallery"/>

    <item android:id="@+id/action_snap_video_record"
        android:title="@string/action_snap_video_record"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_camera"/>
    <item android:id="@+id/action_snap_video_pause"
        android:title="@string/action_snap_video_pause"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_camera"/>
    <item android:id="@+id/action_snap_video_stop"
        android:title="@string/action_snap_video_stop"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_camera"/>


    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"/>


</menu>
